Correstion de la diapo sur l'approximation de la compression traction.

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -404,9 +404,9 @@
   Où $d'$ = $1 -$ la distance entre les deux cellules. \\
   \begin{center}
     Si traction : \medbreak
-    \boxed{d' \leqslant 0 \Rightarrow \varepsilon = -d'^{16}} \medbreak
+    \boxed{d' \leqslant 0 \Rightarrow \varepsilon = - (1 + d'^{16})} \medbreak
     Si compression : \medbreak
-    \boxed{d' > 0 \Rightarrow \varepsilon = d'^2}
+    \boxed{d' > 0 \Rightarrow \varepsilon = 1 + d'^2}
   \end{center}
 \end{frame}
 
